added css style changes

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<title>The BUAS Fanpage</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<h1>The BUAS Fanpage</h1>
-		<h3>Created by: Dani Makaay</h3>
-		<h3>Edited by: Sanne Koelman</h3>
-		<p><a href=http://buas.nl>BUAS</a>, short for Breda University of Applied Sciences, is an University located in Breda, The Netherlands. The university has multiple studies including the media study, Creative Business.</p>
+		<h1 class="my-class">The BUAS Fanpage</h1>
+		<h3 class="my-name">Created by: Dani Makaay</h3>
+		<h3 class="my-name">Edited by: Sanne Koelman</h3>
+		<p><a href="http://buas.nl">BUAS</a>, short for Breda University of Applied Sciences, is an University located in Breda, The Netherlands. The university has multiple studies including the media study, Creative Business.</p>
 		<img src="images/campus.jpg" alt="A photograph of the campus chapel building" height="300" width="400">
+		<p class="my-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae congue mauris rhoncus aenean. Consequat semper viverra nam libero justo laoreet sit amet. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est. Aliquam ut porttitor leo a diam sollicitudin. Ut sem viverra aliquet eget. Dignissim cras tincidunt lobortis feugiat vivamus at augue. Tellus cras adipiscing enim eu turpis egestas pretium. Lacinia quis vel eros donec ac. Auctor urna nunc id cursus metus aliquam eleifend. Cras tincidunt lobortis feugiat vivamus at augue eget arcu. Hac habitasse platea dictumst quisque sagittis purus sit. Gravida neque convallis a cras. Habitant morbi tristique senectus et.</p>
 	</body>
 </html>
