--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<h1 class="my-class">The BUAS Fanpage</h1>
+		<h1 id="my-class">The BUAS Fanpage</h1>
 		<h3 class="my-name">Created by: Dani Makaay</h3>
 		<h3 class="my-name">Edited by: Sanne Koelman</h3>
 		<p><a href="http://buas.nl">BUAS</a>, short for Breda University of Applied Sciences, is an University located in Breda, The Netherlands. The university has multiple studies including the media study, Creative Business.</p>
