Update CSS and HTML

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
 		<title>The BUAS Fanpage</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 	</head>
@@ -14,6 +16,10 @@
 		<div class="border">
 		<img src="images/campus.jpg" alt="A photograph of the campus chapel building" height="300" width="400">
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae congue mauris rhoncus aenean. Consequat semper viverra nam libero justo laoreet sit amet. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est. Aliquam ut porttitor leo a diam sollicitudin. Ut sem viverra aliquet eget. Dignissim cras tincidunt lobortis feugiat vivamus at augue. Tellus cras adipiscing enim eu turpis egestas pretium. Lacinia quis vel eros donec ac. Auctor urna nunc id cursus metus aliquam eleifend. Cras tincidunt lobortis feugiat vivamus at augue eget arcu. Hac habitasse platea dictumst quisque sagittis purus sit. Gravida neque convallis a cras. Habitant morbi tristique senectus et.</p>
+			<br>
+		<h2>Lorem Ipsum Dolor Tree</h2>
+			<br>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae congue mauris rhoncus aenean. Consequat semper viverra nam libero justo laoreet sit amet. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est. Aliquam ut porttitor leo a diam sollicitudin. Ut sem viverra aliquet eget. Dignissim cras tincidunt lobortis feugiat vivamus at augue. Tellus cras adipiscing enim eu turpis egestas pretium.</p>
 		</div>
 		</div>
 	</body>
