--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!doctype html>
 <html lang="en" dir="ltr">
-	<head>
+	<header>
 		<meta charset="utf-8">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
 		<title>The BUAS Fanpage</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-	</head>
+	</header>
 	<body>
 		<h1 id="my-class">The BUAS Fanpage</h1>
 		<div class="my-name">
 		<h3 class="my-paragraph">Created by: Dani Makaay</h3>
 		<h3 class="my-paragraph">Edited by: Sanne Koelman</h3>
 		<p><a href="http://buas.nl">BUAS</a>, short for Breda University of Applied Sciences, is an University located in Breda, The Netherlands. The university has multiple studies including the media study, Creative Business.</p>
-		<div class="border">
+		<article class="border">
 		<img src="images/campus.jpg" alt="A photograph of the campus chapel building" height="300" width="400">
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae congue mauris rhoncus aenean. Consequat semper viverra nam libero justo laoreet sit amet. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est. Aliquam ut porttitor leo a diam sollicitudin. Ut sem viverra aliquet eget. Dignissim cras tincidunt lobortis feugiat vivamus at augue. Tellus cras adipiscing enim eu turpis egestas pretium. Lacinia quis vel eros donec ac. Auctor urna nunc id cursus metus aliquam eleifend. Cras tincidunt lobortis feugiat vivamus at augue eget arcu. Hac habitasse platea dictumst quisque sagittis purus sit. Gravida neque convallis a cras. Habitant morbi tristique senectus et.</p>
 			<br>
 		<h2>Lorem Ipsum Dolor Tree</h2>
 			<br>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae congue mauris rhoncus aenean. Consequat semper viverra nam libero justo laoreet sit amet. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est. Aliquam ut porttitor leo a diam sollicitudin. Ut sem viverra aliquet eget. Dignissim cras tincidunt lobortis feugiat vivamus at augue. Tellus cras adipiscing enim eu turpis egestas pretium.</p>
-		</div>
+		</article>
+			<br>
+			<footer>
+			For more information about the writer, press <a href="https://danimakaay17.wixsite.com/pcmportfolio">here</a>
+			</footer>
 		</div>
 	</body>
 </html>
