--- a/192964.html
+++ b/192964.html
@@ -28,7 +28,7 @@
   <p class="lead">Very nice university, I have fun.</p>
   <hr class="my-4">
   <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  <a class="btn btn-primary btn-lg" href="http://buas.nl" role="button">Learn more</a>
 </div>
 		<div class="container">
 <h1><strong>About me</strong></h1>
