--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <p class="lead"><a href="http://buas.nl">BUAS</a>, short for Breda University of Applied Sciences, is an University located in Breda, The Netherlands. The university has multiple studies including the media study, Creative Business.</p>
   <hr class="my-4">
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae congue mauris rhoncus aenean. Consequat semper viverra nam libero justo laoreet sit amet. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est. Aliquam ut porttitor leo a diam sollicitudin. Ut sem viverra aliquet eget. Dignissim cras tincidunt lobortis feugiat vivamus at augue. Tellus cras adipiscing enim eu turpis egestas pretium. Lacinia quis vel eros donec ac. Auctor urna nunc id cursus metus aliquam eleifend. Cras tincidunt lobortis feugiat vivamus at augue eget arcu. Hac habitasse platea dictumst quisque sagittis purus sit. Gravida neque convallis a cras. Habitant morbi tristique senectus et.</p>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  <a class="btn btn-primary btn-lg" href="http://buas.nl" role="button">Learn more</a>
 </div>
 		<div class="container">
 <h1><strong>Why BUas is pretty fly</strong></h1>
@@ -56,7 +56,7 @@
 </div>
 </div>
 </div>
-<button type="button" href="https://danimakaay17.wixsite.com/pcmportfolio" class="btn btn-primary btn-lg">Fun Fidget Button</button>
+<button type="button" class="btn btn-primary btn-lg"> <a href="https://danimakaay17.wixsite.com/pcmportfolio"> Fun Fidget Button </a></button>
 		<script src="js/jquery-3.6.0.slim.min.js"></script>
 		<script src="js/bootstrap.bundle.min.js"></script>
 	</body>
