--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html lang="en" dir="ltr">
 	<header>
 		<meta charset="utf-8">
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>The BUAS Fanpage</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 	</header>
+	<head>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=TRACKING_ID">
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'TRACKING_ID');
+</script>
+	</head>
 	<body class="body">
 				<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Navbar</a>
