--- a/192964.html
+++ b/192964.html
@@ -6,6 +6,13 @@
 	<title>The BUAS Fanpage</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	 <link href="css/styles.css" rel="stylesheet" type="text/css">
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-9DQ0P1220N">
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-9DQ0P1220N');
+</script>
 	</head>
 		<body class="body">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
