--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!doctype html>
 <html lang="en" dir="ltr">
-	<header>
+	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>The BUAS Fanpage</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-	</header>
-	<head>
-	<script async src="https://www.googletagmanager.com/gtag/js?id=TRACKING_ID">
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9DQ0P1220N">
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
-gtag('config', 'TRACKING_ID');
+gtag('config', 'G-9DQ0P1220N');
 </script>
 	</head>
 	<body class="body">
