--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 		<title>The BUAS Fanpage</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-	<script async src="https://www.googletagmanager.com/gtag/js?id=2375673879">
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-QNBYEQ837D">
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
-gtag('config', '2375673879');
+gtag('config', 'G-QNBYEQ837D');
 </script>
 	</head>
 	<body class="body">
