--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>The BUAS Fanpage</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-QNBYEQ837D">
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-QNBYEQ837D"> </script>
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
