--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ gtag('config', 'G-QNBYEQ837D');
 </div>
 </div>
 </div>
-<button type="button" class="btn btn-primary btn-lg"> <a href="https://danimakaay17.wixsite.com/pcmportfolio"> Fun Fidget Button </a></button>
+<a class="btn btn-primary btn-lg" href="https://danimakaay17.wixsite.com/pcmportfolio" role="button">Fun Fidget Button</a>
 		<script src="js/jquery-3.6.0.slim.min.js"></script>
 		<script src="js/bootstrap.bundle.min.js"></script>
 	</body>
