--- a/index.html
+++ b/index.html
@@ -1,69 +1,34 @@
 <!doctype html>
 <html lang="en" dir="ltr">
 	<head>
+	<header>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
 		<title>The BUAS Fanpage</title>
-		<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-QNBYEQ837D"> </script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'G-QNBYEQ837D');
-</script>
+	</header>
 	</head>
-	<body class="body">
-				<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Main Page <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="192964.html">Second Page</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-		<div class="jumbotron">
-  <h1 class="display-4">The BUAS Fanpage</h1>
-  <p class="lead"><a href="http://buas.nl">BUAS</a>, short for Breda University of Applied Sciences, is an University located in Breda, The Netherlands. The university has multiple studies including the media study, Creative Business.</p>
-  <hr class="my-4">
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae congue mauris rhoncus aenean. Consequat semper viverra nam libero justo laoreet sit amet. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est. Aliquam ut porttitor leo a diam sollicitudin. Ut sem viverra aliquet eget. Dignissim cras tincidunt lobortis feugiat vivamus at augue. Tellus cras adipiscing enim eu turpis egestas pretium. Lacinia quis vel eros donec ac. Auctor urna nunc id cursus metus aliquam eleifend. Cras tincidunt lobortis feugiat vivamus at augue eget arcu. Hac habitasse platea dictumst quisque sagittis purus sit. Gravida neque convallis a cras. Habitant morbi tristique senectus et.</p>
-  <a class="btn btn-primary btn-lg" href="http://buas.nl" role="button">Learn more</a>
-</div>
-		<div class="container">
-<h1><strong>Why BUas is pretty fly</strong></h1>
-<div class="row">
-<div class = "col-sm-12 col-md-12 col-lg-12">
-<p class="title">Buas is pretty cool, don't you think?</p>
-</div>
-<div class="col-sm-6 col-md-6 col-lg-3">
-<h6>Campus is pretty neat</h6>
-</div>
-<div class="col-sm-6 col-md-6 col-lg-3">
-<h6>Radio studio is pretty cool</h6>
-</div>
-<div class="col-sm-6 col-md-6 col-lg-3">
-<h6>Plants look nice</h6>
-</div>
-<div class="col-sm-6 col-md-6 col-lg-3">
-<h6>I go there</h6>
-</div>
-<div class = "col-sm-12 col-md-12 col-lg-12">
-<br>
-<p id="text">Do you want to go to BUas now?</p>
-</div>
-</div>
-</div>
-<a class="btn btn-primary btn-lg" href="https://danimakaay17.wixsite.com/pcmportfolio" role="button">Fun Fidget Button</a>
-		<script src="js/jquery-3.6.0.slim.min.js"></script>
-		<script src="js/bootstrap.bundle.min.js"></script>
+	<body>
+		<h1 id="my-class">The BUAS Fanpage</h1>
+		<div class="my-name">
+		<h3 class="my-paragraph">Created by: Dani Makaay</h3>
+		<h3 class="my-paragraph">Edited by: Sanne Koelman</h3>
+		<p><a href="http://buas.nl">BUAS</a>, short for Breda University of Applied Sciences, is an University located in Breda, The Netherlands. The university has multiple studies including the media study, Creative Business.</p>
+		<div class="border">
+		<article class="border">
+		<img src="images/campus.jpg" alt="A photograph of the campus chapel building" height="300" width="400">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae congue mauris rhoncus aenean. Consequat semper viverra nam libero justo laoreet sit amet. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est. Aliquam ut porttitor leo a diam sollicitudin. Ut sem viverra aliquet eget. Dignissim cras tincidunt lobortis feugiat vivamus at augue. Tellus cras adipiscing enim eu turpis egestas pretium. Lacinia quis vel eros donec ac. Auctor urna nunc id cursus metus aliquam eleifend. Cras tincidunt lobortis feugiat vivamus at augue eget arcu. Hac habitasse platea dictumst quisque sagittis purus sit. Gravida neque convallis a cras. Habitant morbi tristique senectus et.</p>
+			<br>
+		<h2>Lorem Ipsum Dolor Tree</h2>
+			<br>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae congue mauris rhoncus aenean. Consequat semper viverra nam libero justo laoreet sit amet. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est. Aliquam ut porttitor leo a diam sollicitudin. Ut sem viverra aliquet eget. Dignissim cras tincidunt lobortis feugiat vivamus at augue. Tellus cras adipiscing enim eu turpis egestas pretium.</p>
+			</article>
+			</div>
+			<br>
+			<footer>
+			For more information about the writer, press <a href="https://danimakaay17.wixsite.com/pcmportfolio">here</a>
+			</footer>
+		</div>
 	</body>
 </html>
